<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Eventos JAEN</string>

    <string name="usuario">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contraseniaCrear">Crear contraseña</string>
    <string name="contraseniaConfirmar">Confirmar contraseña</string>
    <string name="inicioSesion">INICIAR SESIÓN</string>
    <string name="registro">CREAR CUENTA</string>
    <string name="anadirEvento">Añadir Evento</string>
    <string name="nombreEvento">Nombre del evento</string>
    <string name="descripcion">Descripción (opcional)</string>
    <string name="imagen" translatable="false">Ruta de imagen (opcional)</string>

    <string name="atras">VOLVER</string>
    <string name="Anadir">Añadir</string>

    <string name="categorias" translatable="false">Todo</string>

    <string name="categoriaCultura" translatable="false">Cultura</string>
    <string name="categoriaSocial" translatable="false">Social</string>
    <string name="categoriaEducacion" translatable="false">Educación</string>
    <string name="categoriaCivico" translatable="false">Civico</string>
    <string name="categoriaDeportes" translatable="false">Deportes</string>
</resources>