<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/aceituna"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:alpha="0.1"
        android:contentDescription="@string/descripcion"
        android:src="@drawable/acierto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="361dp"
        android:layout_height="72dp"
        android:layout_marginTop="72dp"
        android:fontFamily="@font/londrina_solid"
        android:shadowColor="@color/verde"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/verdeClaro"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="336dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutCategoria"
        app:layout_constraintVertical_bias="0.04">

        <LinearLayout
            android:id="@+id/tarjeta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp">

            <include layout="@layout/layout_prueba" />

        </LinearLayout>
    </ScrollView>

    <HorizontalScrollView
        android:id="@+id/layoutCategoria"
        android:layout_width="361dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo">

        <LinearLayout
            android:id="@+id/categoriasLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_deporte"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="filtro"
                android:text="@string/categoriaDeportes"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/button_cultura"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="filtro"
                android:text="@string/categoriaCultura"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/button_Educa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="filtro"
                android:text="@string/categoriaEducacion"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/button_social"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="filtro"
                android:text="@string/categoriaSocial"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/button_civico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="filtro"
                android:text="@string/categoriaCivico"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />

            <Button
                android:id="@+id/button_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/botones"
                android:fontFamily="@font/londrina_solid"
                android:onClick="leerDatos"
                android:text="@string/categorias"
                android:textColor="@color/verdeOscuro"
                android:textIsSelectable="false" />
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/verdeAgua"
        android:gravity="center"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:flow_horizontalAlign="center"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/favoritosEventos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/descripcion"
            android:onClick="irFavoritos"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/favoritos"
            android:textAlignment="gravity"
            android:tint="@color/verdeMedio" />

        <ImageView
            android:id="@+id/todosEventos"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/descripcion"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/eventos_activo"
            android:textAlignment="gravity"
            android:tint="@color/verdeMedio" />

        <ImageView
            android:id="@+id/perfil"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/descripcion"
            android:onClick="irPerfil"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/usuario"
            android:textAlignment="gravity"
            android:tint="@color/verdeMedio" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>